Multi-cell adoption
Keep renaming 'default' cell consistent for single and multi cells:

* Default becomes cellX (or it can be imported as is, for a multi-cell
  case only)
* cell1 becomes mapped to openstack-cell1 osdp node set
* cell2 becomes mapped to openstack-cell2 osdp node set, etc.
* cellX (X=3 here) becomes mapped to openstack-cell3. Alternatively,
  default cell retains its name for the openstack-default osdpns
  mapping

Evaluate podified MariaDB passwords for cells from osp-secret
to align the tests with documented commands. Remove no longer
needed podified DB password variable.

Make ansible and shell variables compute cells aware.
Split edpm nodes into compute cells by 1:1 mapping it as
dataplane nodesets.

Rework vars and secrets YAML values for the source and edpm
nodes to not confuse its different naming schemes for cells
in OSP/TripleO and RHOSO.

Use edpm_nodes var to describe compuptes for each cell,
instead of static host and ip vars that only used to work for
a single-cell standalone, or multi-node single cell cases.
Also explain EDPM net config requirements in vars.sample, when
it is used outside of ci-framework (local deployments).

Remove edpm_computes vars no longer used after moving stopping
control-plane tripleo services into edpm-ansible

Remove cached fact for pulled OSP configuration as it can no longer
be generated in a multi-cell setup, where related shell variables
become bash arrays.

Simplify ENV headers management by collecting in a single place.

Provide a variable to define the source cloud Ironic topology,
for any cells with Ironic services.

Align nova/libvirt and related services ordering in the
lists of services defined in multiple places, with those
specified in VA.

Add a missing step in the fast forward uprgade guide
to complete the adoption of the remaining dataplane services.

Align the names in the tests to follow the documented steps
to make the corresponding code easy discoverable.

Adjust storage/storageRequests va

--- a/tests/roles/backend_services/tasks/main.yaml
+++ b/tests/roles/backend_services/tasks/main.yaml
@@ -91,7 +91,7 @@
       args:
         chdir: "../config"
 
-- name: Deploy the podified control plane
+- name: deploy the OpenStackControlPlane CR
   ansible.builtin.shell: |
     {{ shell_header }}
     {{ oc_header }}
@@ -99,20 +99,21 @@
   # args:
   #   chdir: "../config"
 
-- name: wait for services to start up
+- name: verify that MariaDB and RabbitMQ are running, for all defined cells
   ansible.builtin.shell: |
     {{ shell_header }}
     {{ oc_header }}
-    oc wait pod --for condition=Ready {{ item }}
-  register: service_running_result
-  until: service_running_result is success
-  retries: 150
+    {{ cells_env }}
+    oc get pod openstack-galera-0 -o jsonpath='{.status.phase}{"\n"}' | grep Running
+    oc get pod rabbitmq-server-0 -o jsonpath='{.status.phase}{"\n"}' | grep Running
+    for CELL in $(echo $RENAMED_CELLS); do
+      oc get pod openstack-$CELL-galera-0 -o jsonpath='{.status.phase}{"\n"}' | grep Running
+      oc get pod rabbitmq-$CELL-server-0 -o jsonpath='{.status.phase}{"\n"}' | grep Running
+    done
+  register: mariadb_running_result
+  until: mariadb_running_result is success
+  retries: 60
   delay: 2
-  loop:
-    - openstack-galera-0
-    - openstack-cell1-galera-0
-    - rabbitmq-server-0
-    - rabbitmq-cell1-server-0
 
 - name: Patch openstack upstream dns server to set the correct value for the environment
   when: upstream_dns is defined
